--- a/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CarInfoAddVC">
             <connections>
                 <outlet property="birthdayTF" destination="EER-RJ-YNF" id="TjX-10-ufW"/>
+                <outlet property="bottomViewHeightCon" destination="6mG-u4-S84" id="UJ3-sv-lTT"/>
                 <outlet property="brandTF" destination="UJs-q1-lkf" id="GeE-xm-7hb"/>
                 <outlet property="carImgView" destination="Enp-ue-Yd0" id="O9v-n7-zzO"/>
                 <outlet property="editBtn" destination="5mx-e6-UMe" id="S2Y-eC-MhO"/>
@@ -39,11 +40,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="1123"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="1246"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Anl-hI-GET">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="1074"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="1197"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vej-6b-N6E">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
@@ -71,7 +72,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VLY-4y-45k">
-                            <rect key="frame" x="0.0" y="211" width="375" height="745"/>
+                            <rect key="frame" x="0.0" y="211" width="375" height="865"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E6c-Ys-GoJ">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="89"/>
@@ -135,7 +136,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="--" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qUu-DB-edN">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="暂无" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qUu-DB-edN">
                                             <rect key="frame" x="116" y="8.5" width="243" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="L5i-dN-V4N"/>
@@ -144,7 +145,7 @@
                                             <color key="textColor" red="0.40784313729999999" green="0.40784313729999999" blue="0.40784313729999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="--" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lr6-qt-gtW">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="暂无" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lr6-qt-gtW">
                                             <rect key="frame" x="116" y="51" width="199" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="oEp-bN-Dhd"/>
@@ -254,7 +255,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="--" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXz-XX-TOE">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="暂无" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXz-XX-TOE">
                                             <rect key="frame" x="116" y="8.5" width="243" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="l0D-fe-pUn"/>
@@ -991,7 +992,7 @@
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="VTV-AQ-tef" secondAttribute="trailing" id="1S8-n8-lkM"/>
                                 <constraint firstItem="zMl-tr-aM7" firstAttribute="leading" secondItem="VLY-4y-45k" secondAttribute="leading" id="6cd-62-e7Z"/>
-                                <constraint firstAttribute="height" constant="745" id="6mG-u4-S84"/>
+                                <constraint firstAttribute="height" constant="865" id="6mG-u4-S84"/>
                                 <constraint firstItem="E6c-Ys-GoJ" firstAttribute="leading" secondItem="VLY-4y-45k" secondAttribute="leading" id="AjA-Oi-4Jw"/>
                                 <constraint firstItem="hdO-Cs-EcH" firstAttribute="top" secondItem="zMl-tr-aM7" secondAttribute="bottom" constant="10" id="CMA-o8-X27"/>
                                 <constraint firstItem="E6c-Ys-GoJ" firstAttribute="top" secondItem="VLY-4y-45k" secondAttribute="top" id="EbF-cw-Z1A"/>
@@ -1017,7 +1018,7 @@
                     </constraints>
                 </scrollView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MUN-he-tzY">
-                    <rect key="frame" x="0.0" y="1074" width="375" height="49"/>
+                    <rect key="frame" x="0.0" y="1197" width="375" height="49"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N1u-xk-mUB">
                             <rect key="frame" x="0.0" y="0.0" width="187.5" height="49"/>
@@ -1052,7 +1053,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5mx-e6-UMe">
-                    <rect key="frame" x="0.0" y="1074" width="375" height="49"/>
+                    <rect key="frame" x="0.0" y="1197" width="375" height="49"/>
                     <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="2sQ-L6-ULW"/>
@@ -1080,7 +1081,7 @@
                 <constraint firstItem="MUN-he-tzY" firstAttribute="top" secondItem="Anl-hI-GET" secondAttribute="bottom" id="wXr-qc-EQf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-1808" y="247"/>
+            <point key="canvasLocation" x="-1808.5" y="308"/>
         </view>
     </objects>
     <resources>
