--- a/AutoMall/ViewControllers/Upkeep/UpkeepPlanVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepPlanVC.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UpkeepPlanVC">
             <connections>
                 <outlet property="myTableView" destination="KZ0-4I-1KH" id="bzR-fp-2nr"/>
+                <outlet property="signView" destination="8E4-qc-f8v" id="g3Q-Zl-rwb"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -41,18 +42,28 @@
                         <action selector="confirmAction:" destination="-1" eventType="touchUpInside" id="ZTo-US-p8X"/>
                     </connections>
                 </button>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8E4-qc-f8v" customClass="BJTSignView">
+                    <rect key="frame" x="0.0" y="467" width="375" height="200"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="200" id="VR3-Ku-msQ"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Sjy-4X-reG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="EdI-kw-ntM"/>
+                <constraint firstAttribute="trailing" secondItem="8E4-qc-f8v" secondAttribute="trailing" id="Hv9-Zh-Jpt"/>
                 <constraint firstItem="KZ0-4I-1KH" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Lv8-SS-bTS"/>
                 <constraint firstItem="KZ0-4I-1KH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ope-wH-I2w"/>
                 <constraint firstAttribute="trailing" secondItem="Sjy-4X-reG" secondAttribute="trailing" id="R3K-2f-v62"/>
                 <constraint firstAttribute="trailing" secondItem="KZ0-4I-1KH" secondAttribute="trailing" id="RYz-2I-NFC"/>
                 <constraint firstItem="Sjy-4X-reG" firstAttribute="top" secondItem="KZ0-4I-1KH" secondAttribute="bottom" id="VTp-Mf-68N"/>
+                <constraint firstAttribute="bottom" secondItem="8E4-qc-f8v" secondAttribute="bottom" id="cTr-qS-aGa"/>
+                <constraint firstItem="8E4-qc-f8v" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gze-Xh-SWe"/>
                 <constraint firstAttribute="bottom" secondItem="Sjy-4X-reG" secondAttribute="bottom" id="n2l-za-5Rv"/>
             </constraints>
-            <point key="canvasLocation" x="-295.5" y="60.5"/>
+            <point key="canvasLocation" x="-605" y="54"/>
         </view>
     </objects>
 </document>
